# sonar

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.agents/skills/sonar/: SKILL.md
config/: opencode.mcp.example.json  sonar.compose.example.toml  sonar.example.toml  sonar.mcp.example.json
docs/: architecture.md  getting-started.md  http-api.md  mcp-requirements.md  nyx-update-2026-04-07.md  openapi.json  quick-start.md
docs/guides/: http-api.md  mcp.md  prepared-bundles.md  resilient-retrieval.md
docs/plans/: blackglass-consolidation-v0.3.0.md
docs/reference/: configuration.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md
searxng/: settings.yml
secrets/: README.md  sonar.secrets.example.toml
src/sonar/: __init__.py  bundles.py  embeddings.py  engine.py  errors.py  export_openapi.py  extract.py  fetch.py  main.py  mcp_server.py  query_planner.py  ranking.py  search_providers.py  service_api.py  settings.py  smoke.py  storage.py  web_api.py
src/sonar/retrieval/: __init__.py  capabilities.py  heuristics.py  models.py  orchestrator.py  policy.py  robots.py
src/sonar/retrieval/backends/: __init__.py  base.py  cloakbrowser_backend.py  httpx_backend.py  scrapling_backend.py
tests/: test_documentation.py  test_mcp_server.py  test_public_repo_safety.py  test_query_planner.py  test_retrieval.py  test_search_provider.py  test_service_api.py  test_settings.py  test_smoke.py  test_storage.py  test_web_api.py
