[project]
name = "sonar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "netlooker", email = "netlooker@outlook.be" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.2",
    "pydantic-ai>=1.56.0",
    "pyyaml>=6.0.3",
    "tavily-python>=0.7.21",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
