[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar"
version = "0.1.0"
description = "Deterministic live-web search, fetch, and extraction service for agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.10,<3.0",
    "pypdf>=5.4,<6.0",
    "trafilatura>=1.12,<2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.116,<1.0",
    "uvicorn>=0.35,<1.0",
]
mcp = [
    "mcp[cli]>=1.26,<2.0",
]
dev = [
    "pytest>=8.3,<10.0",
    "fastapi>=0.116,<1.0",
    "uvicorn>=0.35,<1.0",
    "mcp[cli]>=1.26,<2.0",
]

[project.scripts]
sonar-api = "sonar.web_api:main"
sonar-mcp = "sonar.mcp_server:main"
sonar-smoke = "sonar.smoke:main"
sonar-export-openapi = "sonar.export_openapi:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sonar", "sonar.*"]
